--- a/styles/style.css
+++ b/styles/style.css
@@ -145,3 +145,35 @@ p {
 	background-color: var(--secondary-color);
 	padding: 75px;
 }
+
+.emailRegisterSection {
+	margin: 75px;
+	padding: 50px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 25px;
+	background-color: var(--secondary-color);
+}
+
+input {
+	background-color: #0000;
+	border-radius: 25px;
+	border: 2px solid var(--primary-color);
+	width: 200px;
+	height: 35px;
+	color: #000;
+	border-right-color: #0000;
+}
+
+.SubmitBtn {
+	background-color: var(--primary-color);
+	border-radius: 25px;
+	border: 2px solid var(--primary-color);
+	height: 41px;
+	width: 100px;
+	position: relative;
+	right: 40px;
+}
