Optimized the style

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,30 +20,155 @@ body {
 	border-radius: 50%;
 }
 
-@media (min-width: 551px) {
-	.options {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
+.options {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
 
+.option {
+	margin: 0px;
+	margin-right: 50px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #000;
+}
+
+.topPfp {
+	border-radius: 50%;
+}
+
+h1 {
+	z-index: 100;
+}
+
+header {
+	background-color: var(--primary-color);
+	box-sizing: border-box;
+	border-bottom: 3px solid black;
+	z-index: 999;
+	display: flex;
+	padding: 7.5px;
+	padding-left: 25px;
+	justify-content: space-between;
+}
+
+.recipeTypeTxt {
+	font-family: "Courgette";
+}
+
+.recipeNameBold {
+	font-weight: bolder;
+}
+
+.recipeNameNormal {
+	font-weight: normal;
+}
+
+.recipeBtn {
+	border: 2px solid var(--secondary-color);
+	color: var(--secondary-color);
+	background-color: #0000;
+	border-radius: 25px;
+	width: 100px;
+	height: 35px;
+}
+
+.optionTxt {
+	text-decoration: none;
+	color: #000;
+}
+
+.optionB {
+	text-decoration: none;
+	color: #000;
+}
+
+.topDiv {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--bg-thing);
+}
+
+.category {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	border-bottom: 3px solid #000;
+	flex-wrap: wrap;
+}
+
+.articleContainer {
+	align-items: center;
+	justify-content: space-between;
+}
+
+h3 {
+	font-family: "Arial";
+	margin: 10px;
+}
+
+p {
+	font-family: "Arial";
+	margin: 10px;
+}
+
+.emailRegisterSection {
+	margin: 75px;
+	padding: 50px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 25px;
+	background-color: var(--secondary-color);
+}
+
+.authorDiv {
+	align-items: center;
+	justify-content: space-around;
+	border-top: 3px solid #000;
+	background-color: var(--secondary-color);
+	padding: 75px;
+}
+
+.optionEnd {
+	margin: 0px;
+	margin-right: 50px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #000;
+	display: initial;
+}
+
+.finalDiv {
+	align-items: center;
+	justify-content: space-between;
+}
+
+.options {
+	display: flex;
+	justify-content: space-between;
+}
+
+.optionsMedia {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+@media (min-width: 551px) {
 	.option {
-		margin: 0px;
-		margin-right: 50px;
-		font-size: 18px;
-		text-decoration: none;
-		color: #000;
 		display: initial;
 	}
 
 	.topPfp {
-		border-radius: 50%;
 		content: url("../Assets/pfpPlaceholder.png");
 	}
 
 	h1 {
 		position: initial;
-		z-index: 100;
 	}
 
 	.heheheha {
@@ -52,39 +177,19 @@ body {
 	}
 
 	header {
-		background-color: var(--primary-color);
 		height: 60px;
-		box-sizing: border-box;
-		border-bottom: 3px solid black;
-		z-index: 999;
-		display: flex;
-		padding: 7.5px;
-		padding-left: 25px;
-		justify-content: space-between;
 	}
 
 	.recipeTypeTxt {
-		font-family: "Courgette";
 		font-size: 20px;
 	}
 
 	.recipeNameBold {
 		font-size: 64px;
-		font-weight: bolder;
 	}
 
 	.recipeNameNormal {
 		font-size: 48px;
-		font-weight: normal;
-	}
-
-	.recipeBtn {
-		border: 2px solid var(--secondary-color);
-		color: var(--secondary-color);
-		background-color: #0000;
-		width: 100px;
-		height: 35px;
-		border-radius: 25px;
 	}
 
 	.optionTxt {
@@ -92,8 +197,6 @@ body {
 		margin-right: 50px;
 		margin-left: 50px;
 		font-size: 18px;
-		text-decoration: none;
-		color: #000;
 		width: 250px;
 	}
 
@@ -107,24 +210,10 @@ body {
 		margin-right: 50px;
 		margin-left: 50px;
 		font-size: 18px;
-		text-decoration: none;
-		color: #000;
-	}
-
-	.topDiv {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		background-color: var(--bg-thing);
 	}
 
 	.category {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
 		height: 75px;
-		border-bottom: 3px solid #000;
-		flex-wrap: wrap;
 	}
 
 	.articleSection {
@@ -133,8 +222,6 @@ body {
 
 	.articleContainer {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
 		margin: 30px;
 	}
 
@@ -144,94 +231,45 @@ body {
 	}
 
 	h3 {
-		font-family: "Arial";
 		font-size: 40px;
-		margin: 10px;
 	}
 
 	p {
-		font-family: "Arial";
-		margin: 10px;
 		width: 60%;
 	}
 
 	.emailRegisterSection {
-		margin: 75px;
-		padding: 50px;
-		padding-top: 100px;
-		padding-bottom: 100px;
 		display: flex;
-		align-items: center;
-		justify-content: space-around;
-		border-radius: 25px;
-		background-color: var(--secondary-color);
 	}
 
 	.authorDiv {
 		display: flex;
-		align-items: center;
-		justify-content: space-around;
-		border-top: 3px solid #000;
-		background-color: var(--secondary-color);
-		padding: 75px;
 	}
 
 	.authorDescription {
 		width: 60%;
 	}
 
-	.optionEnd {
-		margin: 0px;
-		margin-right: 50px;
-		font-size: 18px;
-		text-decoration: none;
-		color: #000;
-		display: initial;
-	}
-
 	.finalDiv {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
 	}
 
 	.options {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	.optionsMedia {
-		display: flex;
-		justify-content: space-between;
 		align-items: center;
 	}
 }
 
 @media (max-width: 550px) {
-	.options {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
 	.option {
-		margin: 0px;
-		margin-right: 50px;
-		font-size: 18px;
-		text-decoration: none;
-		color: #000;
 		display: none;
 	}
 
 	.topPfp {
-		border-radius: 50%;
 		content: url("../Assets/desplegaImg.png");
 	}
 
 	h1 {
 		position: absolute;
-		z-index: 100;
 	}
 
 	.heheheha {
@@ -240,46 +278,24 @@ body {
 	}
 
 	header {
-		background-color: var(--primary-color);
 		height: 100px;
-		box-sizing: border-box;
-		border-bottom: 3px solid black;
-		z-index: 999;
-		display: flex;
-		padding: 7.5px;
-		padding-left: 25px;
-		justify-content: space-between;
 	}
 
 	.recipeTypeTxt {
-		font-family: "Courgette";
 		font-size: 28px;
 	}
 
 	.recipeNameBold {
 		font-size: 96px;
-		font-weight: bolder;
 	}
 
 	.recipeNameNormal {
 		font-size: 64px;
-		font-weight: normal;
-	}
-
-	.recipeBtn {
-		border: 2px solid var(--secondary-color);
-		color: var(--secondary-color);
-		background-color: #0000;
-		width: 100px;
-		height: 35px;
-		border-radius: 25px;
 	}
 
 	.optionTxt {
 		margin: 30px;
 		font-size: 30px;
-		text-decoration: none;
-		color: #000;
 		text-align: center;
 	}
 
@@ -290,24 +306,10 @@ body {
 	.optionB {
 		margin: 30px;
 		font-size: 32px;
-		text-decoration: none;
-		color: #000;
-	}
-
-	.topDiv {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		background-color: var(--bg-thing);
 	}
 
 	.category {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
 		height: fit-content;
-		border-bottom: 3px solid #000;
-		flex-wrap: wrap;
 		padding: 25px;
 	}
 
@@ -316,8 +318,6 @@ body {
 	}
 
 	.articleContainer {
-		align-items: center;
-		justify-content: space-between;
 		margin: 0px;
 	}
 
@@ -332,68 +332,26 @@ body {
 	}
 
 	h3 {
-		font-family: "Arial";
 		font-size: 52px;
-		margin: 10px;
 	}
 
 	p {
-		font-family: "Arial";
-		margin: 10px;
 		width: 100%;
 		font-size: 16px;
-	}
-
-	.emailRegisterSection {
-		margin: 75px;
-		padding: 50px;
-		padding-top: 100px;
-		padding-bottom: 100px;
-		align-items: center;
-		justify-content: space-around;
-		border-radius: 25px;
-		background-color: var(--secondary-color);
-	}
-
-	.authorDiv {
-		align-items: center;
-		justify-content: space-around;
-		border-top: 3px solid #000;
-		background-color: var(--secondary-color);
-		padding: 75px;
 	}
 
 	.authorDescription {
 		width: 100%;
 	}
 
-	.optionEnd {
-		margin: 0px;
-		margin-right: 50px;
-		font-size: 18px;
-		text-decoration: none;
-		color: #000;
-		display: initial;
-	}
-
 	.finalDiv {
-		align-items: center;
-		justify-content: space-between;
 		height: 150px;
 	}
 
 	.options {
-		display: flex;
-		justify-content: space-between;
 		align-items: baseline;
 		flex-direction: column;
 		justify-self: anchor-center;
-	}
-
-	.optionsMedia {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 	}
 }
 
